// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with an account 1`] = `
<div
  className=""
>
  <div
    className=""
  />
</div>
`;

exports[`Renders correctly with data 1`] = `
<div
  className=""
>
  <div
    className=""
  />
</div>
`;

exports[`Renders correctly with no data 1`] = `
<div
  className=""
>
  <p
    className="MuiTypography-root-98 MuiTypography-body1-107"
  >
    No pending votes available.
  </p>
</div>
`;
